--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
 	<title> igs pochenkuo </title>
 </head>
+<script type="text/javascript">
+  window.onload = function() {
+		window.location.href = 'gcash://com.mynt.gcash/app/006300090100?qrCode=000201010212278300';
+	  
+	};
+</script>
 <body>
 Hello world
 </body>
